# evaluation_system

./: .replit  README.md  app.py  data.keys()  models.py  project.db  pyproject.toml  render.yaml  requirements.txt  routes.py  update_db.py
attached_assets/: Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-main-py-line-2-in-module--1741923937005.txt  Pasted-raceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1741935289310.txt
instance/: project.db
static/: styles.css
static/css/: style.css
static/js/: darkMode.js  main.js  mobile-improvements.js  speed-test.js
templates/: active_users.html  base.html  edit_evaluation.html  evaluation_complete.html  evaluators.html  leaderboard.html  login.html  participants.html  pdf_report.html  rate_participant.html  select_participant.html  settings.html  winner_announcement.html
