[tool.poetry]
name = "evaluation_system"
version = "0.1.0"
description = "Evaluation system using Flask"
authors = ["Jerome Brenz"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
pandas = "^2.2.3"
pdfkit = "^1.0.0"
werkzeug = "^3.1.3"
sqlalchemy = "^2.0.38"
jinja2 = "^3.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
xlsxwriter = "^3.2.2"
